# blocks

./: .gitignore  CMakeLists.txt
src/: Application.cpp  Application.hpp  ApplicationError.cpp  CMakeLists.txt  FileNotFoundError.hpp  GameState.cpp  GameState.hpp  Main.cpp  MainTest.cpp  Object.cpp  Object.hpp  OpenGLError.cpp  OpenGLError.hpp  PauseState.cpp  PauseState.hpp  SimplexNoise.cpp  StateStack.cpp  StateStack.hpp  WorldState.cpp  WorldState.hpp
src/application/: Application.cpp  Application.hpp  ApplicationError.cpp  ApplicationError.hpp  CMakeLists.txt
src/application/state/: CMakeLists.txt  GameState.cpp  GameState.hpp  PauseState.cpp  PauseState.hpp  StateStack.cpp  StateStack.hpp  WorldState.cpp  WorldState.hpp
src/graphics/: Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Glad.cpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  OpenGLError.cpp  OpenGLError.hpp  ShaderError.cpp  ShaderError.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderProgramError.cpp  ShaderProgramError.hpp  Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp
src/graphics/glad/: CMakeLists.txt  Glad.cpp  Glad.h
src/graphics/shader/: CMakeLists.txt  FragmentShader.glsl  VertexShader.glsl
src/logger/: CMakeLists.txt  GlobalLogger.cpp  GlobalLogger.hpp  LogLevel.hpp  Logger.cpp  Logger.hpp  LoggerException.cpp  LoggerException.hpp
src/mesh/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Quad.cpp  Quad.hpp  Triangle.cpp  Triangle.hpp  Vertex.cpp  Vertex.hpp
src/state/: GameState.cpp  GameState.hpp  PauseState.cpp  PauseState.hpp  StateStack.cpp  StateStack.hpp  WorldState.cpp  WorldState.hpp
src/states/: CMakeLists.txt  GameState.cpp  GameState.hpp  PauseState.cpp  PauseState.hpp  StateStack.cpp  StateStack.hpp  WorldState.cpp  WorldState.hpp
src/utility/: Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Defs.hpp  FileNotFoundError.cpp  FileNotFoundError.hpp  FileRead.cpp  FileRead.hpp  Image.cpp  Image.hpp  Point.hpp  Point2.hpp  Point3.hpp  PointTransformation.cpp  PointTransformation.hpp  Volume.cpp  Volume.hpp
src/utility/tests/: TestPoint.cpp
src/world/: Architect.cpp  Architect.hpp  Block.cpp  Block.hpp  BlockManager.cpp  BlockManager.hpp  BlockType.hpp  BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  ChunkGrid.hpp  Cube.cpp  Cube.hpp  Direction.cpp  Direction.hpp  Entity.cpp  Entity.hpp  Fog.cpp  Fog.hpp  Frustum.cpp  Frustum.hpp  HeightCalculation.cpp  HeightCalculation.hpp  NeighbourMask.cpp  NeighbourMask.hpp  Object.cpp  Object.hpp  Octree.hpp  Player.cpp  Player.hpp  Point.cpp  Point.hpp  Position.cpp  Position.hpp  ProtoBlock.cpp  ProtoBlock.hpp  (+7 more)
src/world/architect/: Architect.cpp  Architect.hpp  Biome.cpp  Biome.hpp  CMakeLists.txt  GlobalPosition.cpp  GlobalPosition.hpp  SimplexNoise.cpp  SimplexNoise.hpp
src/world/architect/tests/: CMakeLists.txt  TestGlobalPosition.cpp
src/world/chunk/: Block.cpp  Block.hpp  BlockType.cpp  BlockType.hpp  Blocktree.cpp  Blocktree.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkLoader.cpp  ChunkLoader.hpp  CompositeMesh.cpp  CompositeMesh.hpp  Direction.cpp  Direction.hpp  Element.cpp  Element.hpp  Face.cpp  Face.hpp  Facetree.cpp  Facetree.hpp  Grid.cpp  Grid.hpp  LayerFaces.hpp  NeighbourMask.cpp  NeighbourMask.hpp  PointChunkCmp.hpp  SimplexNoise.cpp  SimplexNoise.hpp
src/world/chunk/tests/: CMakeLists.txt  TestBlocktreeInsert.cpp  TestBlocktreeMeshCreation.cpp  TestBlocktreeMeshCreation.hpp
src/world/culling/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  Frustum.cpp  Frustum.hpp  Intersection.hpp  Octree.hpp
src/world/octree/: CMakeLists.txt  Octree.hpp
test/: CMakeLists.txt  Main.cpp
test/test_blocktree/: CMakeLists.txt  TestBlocktree.cpp  TestBlocktreeInsert.cpp  TestBlocktreeMeshCreation.cpp  TestBlocktreeMeshCreation.hpp
test/test_point/: CMakeLists.txt  TestPoint.cpp
