cmake_minimum_required(VERSION 3.10)
project(testblocks CXX)

macro(add_test_suites)
    get_property(SRCS TARGET ${EXEC_NAME} PROPERTY EXEC_NAME)
    file (RELATIVE_PATH _relPath ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
    foreach(_src ${ARGN})
        if (_relPath)
            file(TO_NATIVE_PATH "${_relPath}/${_src}" _nativePath)
        else()
            file(TO_NATIVE_PATH ${_src} _nativePath)
        endif()
        set_property(TARGET testblocks APPEND PROPERTY SRC_LIST ${_nativePath})
        string(REPLACE ".cpp" "" TEST_NAME ${_src})
        add_test(NAME ${TEST_NAME} COMMAND ${EXEC_NAME} "--gtest_filter=${TEST_NAME}.*")
    endforeach()
endmacro()

macro(add_test_files)
    get_property(SRCS TARGET ${EXEC_NAME} PROPERTY EXEC_NAME)
    file (RELATIVE_PATH _relPath ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
    foreach(_src ${ARGN})
        if (_relPath)
            file(TO_NATIVE_PATH "${_relPath}/${_src}" _nativePath)
        else()
            file(TO_NATIVE_PATH ${_src} _nativePath)
        endif()
        set_property(TARGET testblocks APPEND PROPERTY SRC_LIST ${_nativePath})
    endforeach()
endmacro()

set(EXEC_NAME "testblocks")

add_executable(${EXEC_NAME} "Main.cpp")
add_dependencies(${EXEC_NAME} blocks)

find_package(GTest REQUIRED COMPONENTS gtest gmock)
target_link_libraries(${EXEC_NAME} blks ${GTEST_LIBRARIES})

target_include_directories(${EXEC_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/src")
target_include_directories(${EXEC_NAME} PRIVATE SYSTEM "/usr/local/include" ${GTEST_INCLUDE_DIR})

set_property(TARGET testblocks PROPERTY EXEC_NAME ${EXEC_NAME})
add_subdirectory(test_point)
add_subdirectory(test_blocktree)

get_property(SRCS TARGET ${EXEC_NAME} PROPERTY SRC_LIST)
target_sources(${EXEC_NAME} PRIVATE ${SRCS})
