add_sources(
  Glad.cpp
  OpenGLError.hpp
  OpenGLError.cpp
  Mesh.hpp
  Mesh.cpp
  MeshLoader.hpp
  MeshLoader.cpp
  ShaderProgram.hpp
  ShaderProgram.cpp
  ShaderError.hpp
  ShaderError.cpp
  ShaderProgramError.hpp
  ShaderProgramError.cpp
  Bitmap.hpp
  Bitmap.cpp
  Texture.hpp
  Texture.cpp
)

add_subdirectory(shader)
