add_sources(
  World.hpp
  World.cpp
  Entity.hpp
  Entity.cpp
  Camera.hpp
  Camera.cpp
  Frustum.hpp
  Frustum.cpp
  BoundingBox.hpp
  BoundingBox.cpp
  Intersection.hpp
  Block.hpp
  Block.cpp
  NeighbourMask.hpp
  NeighbourMask.cpp
  Direction.hpp
  Direction.cpp
  SimplexNoise.hpp
  SimplexNoise.cpp
  HeightCalculation.hpp
  HeightCalculation.cpp
  Octree.hpp
)

add_subdirectory(chunk)
