add_sources(
  World.hpp
  World.cpp
  Entity.hpp
  Entity.cpp
  Camera.hpp
  Camera.cpp
  Frustum.hpp
  Frustum.cpp
  BoundingBox.hpp
  BoundingBox.cpp
  Intersection.hpp
  NeighbourMask.hpp
  NeighbourMask.cpp
  Direction.hpp
  Direction.cpp
  ProtoBlock.hpp
  ProtoBlock.cpp
  Octree.hpp
  Size.hpp
)

add_subdirectory(chunk)
add_subdirectory(architect)
