add_sources(
  World.hpp
  World.cpp
  Entity.hpp
  Entity.cpp
  Camera.hpp
  Camera.cpp
  Fog.hpp
  Fog.cpp
  Direction.hpp
  Direction.cpp
  BlockManager.hpp
  BlockManager.cpp
  ProtoBlock.hpp
  ProtoBlock.cpp
  Size.hpp
)

add_subdirectory(chunk)
add_subdirectory(architect)
add_subdirectory(culling)
